[tool.poetry]
name = "openly-core"
version = "0.1.0"
description = "Python API wrapper for Rently Smart Home hubs and devices"
authors = ["Kais Bennaceur <bennaceur.kais@me.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "openly" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.12.0"
bandit = "^1.7.4"
safety = "^2.3.5"
sphinx = "^6.1.3"
mypy = "^1.1.1"
types-requests = "^2.28.11.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
