[tool.poetry]
name = "openly-core"
version = "0.0.0"
description = "Python API wrapper for Rently Smart Home hubs and devices"
authors = ["Kais Bennaceur <bennaceur.kais@me.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "openly" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
asyncio = "^3.4.3"
aiohttp = "^3.11.11"
pyjwt = "^2.10.1"
ruff = "^0.9.3"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.2"
safety = "^3.2.14"
sphinx = "^8.1.3"
mypy = "^1.14.1"
types-requests = "^2.32.0.20241016"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py313"

[tool.ruff.lint]

select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"
